# bing-stt

./: Cargo.toml  README.md
examples/windows-microphone-speech-recognition/: Cargo.toml
examples/windows-microphone-speech-recognition/src/: main.rs  recorder.rs
src/: lib.rs  speech_recognition.rs  voice_activity_detection.rs
