[package]
name = "bing-stt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["formatting"] }
websocket = { version = "0.27.1", features = ["sync-ssl"], default-features = false }
