[package]
name = "windows-microphone-speech-recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bing-stt = { path = "../.." }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Wmi",
]
